--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ When I was a kid, I just went out and play with my father and I always carried a
 	
 	<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="works">
         <div class="my-auto">
-          <h2 class="mb-5">Works</h2>
+          <h2 class="mb-5"><span class="text-primary">作品</span>Works</h2>
           <ul class="fa-ul mb-0">
 			  <a href="https://youtu.be/sAzV1OGSans" target="_blank" title="影片:重拾">影片:重拾</a>
             
