--- a/index.html
+++ b/index.html
@@ -329,26 +329,28 @@ When I was a kid, I just went out and play with my father and I always carried a
         <div class="my-auto">
           <h2 class="mb-5"><span class="text-primary">作品</span>Works</h2>
           <ul class="fa-ul mb-0">
-			  <a href="https://youtu.be/sAzV1OGSans" target="_blank" title="影片:重拾">影片:重拾</a>
+			  <p><a href="https://youtu.be/sAzV1OGSans" target="_blank" title="影片:重拾">影片:重拾</a></p>
+			  <p><a href="https://4yun.github.io/ics2/" target="_blank" title="網站:資傳系網">網站:資傳系網</a></p>
             <div class="subheading mb-3">高中學生會舉辦活動時製作的場佈</div>
+			<div class="col-lg-4 col-sm-6">
 			  <div class="row">
 				<p><div class="col-sm">
-					<img class="img-fluid img-profile  mx-auto mb-2" src="img/1.jpg" alt="" width="500" height="275"> 
+					<img class="img-fluid img-profile  mx-auto mb-2" src="img/1.jpg" alt="" width="500" height="275"></p>
 				</div>
 				<div class="col-sm">
-					<img class="img-fluid img-profile  mx-auto mb-2" src="img/3.jpg" alt="" width="275" height="150"><p>
+					<p><img class="img-fluid img-profile  mx-auto mb-2" src="img/3.jpg" alt="" width="275" height="150"></p>
 			  </div>
 			  <p><div class="col-sm">
-					<img class="img-fluid img-profile  mx-auto mb-2" src="img/2.jpg" alt="" width="500" height="275"> 
+					<p><img class="img-fluid img-profile  mx-auto mb-2" src="img/2.jpg" alt="" width="500" height="275"></p>
 				</div>
 				<div class="col-sm">
-					<img class="img-fluid img-profile  mx-auto mb-2" src="img/4.jpg" alt="" width="500" height="275"><p>
+					<p><img class="img-fluid img-profile  mx-auto mb-2" src="img/4.jpg" alt="" width="500" height="275"></p>
 				</div>
 				<p><div class="col-sm">
-					<img class="img-fluid img-profile  mx-auto mb-2" src="img/5.jpg" alt="" width="500" height="275"> 
+					<p><img class="img-fluid img-profile  mx-auto mb-2" src="img/5.jpg" alt="" width="500" height="275"></p> 
 				</div>
 				<div class="col-sm">
-					<img class="img-fluid img-profile  mx-auto mb-2" src="img/6.jpg" alt="" width="275" height="150"><p>
+					<p><img class="img-fluid img-profile  mx-auto mb-2" src="img/6.jpg" alt="" width="275" height="150"></p>
 				</div>
 			</div>
           </ul>
